--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id = "progress" class = "progress"></div>
         </div>
         <div class = "Nav">
-            <a href = "#one"></a><input onclick ="radioclicked('#one');" type="radio" name="slides" value="1" checked/></a>
+            <a href = "#one"><input onclick ="radioclicked('#one');" type="radio" name="slides" value="1" checked/></a>
             <a href = "#two"><input onclick ="radioclicked('#two');"  type="radio" name="slides" value="2"/></a>
             <a href = "#three"><input onclick ="radioclicked('#three');" type="radio" name="slides" value="3"/></a>
             <a href = "#four"><input onclick ="radioclicked('#four');" type="radio" name="slides" value="4"/></a>
