--- a/index.html
+++ b/index.html
@@ -32,18 +32,37 @@
             </content>
         </main>
         <main id = "three">
-            <content class = "effect">
-                - Hello, I'm Hou Chi Chan -   
+            <content class = "effect" onclick = "Change()">
+                - Things created in P5 - 
+                <div>
+                    <span id = "sortName" class = "effect"> Bubble Sort ( Click to change )</span>
+                    <iframe id = "sorts" src = "bubble_sort/index.html" onclick = "Change()" class = "effect"></iframe>
+                </div> 
             </content>
         </main>
         <main id = "four">
             <content class = "effect">
-                - Hello, I'm Hou Chi Chan -   
+               - Hobbies - 
+               <div>
+                    - Drawing -
+                </div>
+                <div>
+                    - Coding -
+                </div>
+                <div>
+                    - Music - Guitar -
+                </div>  
             </content>
         </main>
         <main id = "five">
             <content class = "effect">
-                - Hello, I'm Hou Chi Chan -   
+                - Contact -   
+                <div>
+                    - Github Username: SciencePotato - 
+                </div>
+                <div>
+                    - Gmail: houchi6mail@gmail.com -
+                </div>
             </content>
         </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
